[metadata]
name = sapy
version = 2.2.0
description = App implementing the Japanese Kakeibo method
author = Stefano Prina
author_email = stethewwolf@posteo.net
url = https://sapy.stethewwolf.eu
license = GPL3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
packages = find:

[options.entry_points]
console_scripts =
    sapy=sapy.sapy:run

[options.package_data]
* = *.glade
