[metadata]
name = sapy
version = attr: sapy.utils.constants.__version__
description = attr: sapy.utils.constants.__app_description__
author = attr: sapy.utils.constants.__author__
author_email = attr: sapy.utils.constants.__author_email__
url = attr: sapy.utils.constants.__app_url__
license = attr: sapy.utils.constants.__app_license__
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
packages = find:

[options.entry_points]
console_scripts =
    sapy=sapy.main:run

[options.package_data]
* = *.glade
